Add interrupt support and HCSR04 sensor support

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,5 @@ framework = arduino
 build_flags = -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
 lib_deps = https://github.com/homieiot/homie-esp8266.git#develop-v3
 monitor_speed = 115200
+upload_port = COM11
+monitor_port = COM11
